Add working countdown

--- a/client/views/timer/timer.html
+++ b/client/views/timer/timer.html
@@ -1,6 +1,9 @@
 <template name="Timer">
-  Hej
+  {{> Loading class=loading}}
+  {{>Clock timer}}
+</template>
 
-  {{hello}}
-
+<template name="Clock">
+  {{clock.minutes}}:{{clock.seconds}}
+  {{current}}
 </template>
